--- a/package.json
+++ b/package.json
@@ -21,5 +21,28 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
-  }
+  },
+  "eslintConfig": {
+     "root": true,
+     "env": {
+     "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+     ],
+     "rules": {
+       "no-mixed-spaces-and-tabs": "off",
+       "no-console": "off",
+       "no-unused-vars": "off",
+       "prettier/prettier": "off"
+     },
+     "parserOptions": {
+       "parser": "babel-eslint"
+     },
+     "globals": {
+       "$": false,
+       "YT": false
+     }
+   }
 }
